--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -289,14 +289,17 @@
             android:id="@+id/fab_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:layout_marginRight="20dp"
             android:layout_margin="0dp"
-            android:layout_gravity="end|bottom"
             android:backgroundTint="@color/red_solid"
             android:contentDescription="Add"
             android:src="@drawable/ic_add"
             android:tint="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            />
+
 
     </LinearLayout>
+
     </RelativeLayout>
+
