UPDATE : update drawable dan error pada bebrapa sintaks

--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="59dp"
         android:text="Notifikasi"
         android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
