--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -13,21 +13,22 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/profileTitle"
+            android:id="@+id/title1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="19.5dp"
-            android:layout_marginTop="19.5dp"
-            android:layout_marginEnd="19.5dp"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
             android:layout_marginBottom="59dp"
             android:text="Profil"
             android:textColor="@color/black"
-            android:textSize="20sp"/>
+            android:textSize="20dp" />
 
+        <!-- Main Container for Profile Content -->
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/profileTitle"
+            android:layout_below="@id/title1"
             android:orientation="vertical"
             android:background="@drawable/container_login"
             android:padding="16dp">
@@ -51,8 +52,8 @@
                     android:id="@+id/camera_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/ic_camera"
                     android:layout_gravity="bottom|end"
+                    android:src="@drawable/ic_camera"
                     android:background="@drawable/circle_background"
                     android:padding="8dp"
                     app:tint="@color/red"/>
@@ -83,12 +84,11 @@
                 android:id="@+id/profile_jabatan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
                 android:text="Jabatan: -"
                 android:textSize="18sp"
                 android:textColor="@color/black"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="16dp"/> <!-- Jarak ditambahkan di sini -->
+                android:layout_marginBottom="16dp"/>
 
             <TextView
                 android:id="@+id/profile_address"
@@ -98,7 +98,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="16dp"/> <!-- Jarak ditambahkan di sini -->
+                android:layout_marginBottom="16dp"/>
 
             <TextView
                 android:id="@+id/profile_phone"
@@ -108,14 +108,14 @@
                 android:textSize="18sp"
                 android:textColor="@color/black"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="16dp"/> <!-- Jarak ditambahkan di sini -->
+                android:layout_marginBottom="16dp"/>
 
             <Button
                 android:id="@+id/btnChangePassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ubah Password"
-                android:layout_marginTop="110dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="18dp"
                 android:backgroundTint="@color/red"
                 android:textColor="@color/white"/>
@@ -130,9 +130,7 @@
                 android:drawablePadding="8dp"
                 android:textColor="@color/red"
                 android:textSize="18sp"
-                android:layout_marginBottom="1000dp"
                 android:clickable="true"/>
-
         </androidx.appcompat.widget.LinearLayoutCompat>
     </RelativeLayout>
 </ScrollView>
