UPDATE : update colors pada activity_main.xml, bottom_bar.xml, colors.xml, dialog_change_password.xml, themes.xml

--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -29,4 +29,16 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"/>
 
+    <TextView
+        android:id="@+id/newConfirmPasswordLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Konfirmasi Password Baru"/>
+
+    <EditText
+        android:id="@+id/newConfirmPasswordLabelPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"/>
+
 </LinearLayout>
