--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_bar"/>
+        app:menu="@menu/bottom_bar"
+        app:itemIconTint="@color/red" />
 
 </RelativeLayout>
