--- a/app/src/main/res/menu/bottom_bar.xml
+++ b/app/src/main/res/menu/bottom_bar.xml
@@ -4,14 +4,25 @@
     <item
         android:id="@+id/home"
         android:title="Home"
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/ic_home"
+        android:tint="@color/red" />
 
     <item
         android:id="@+id/pengaduan"
         android:title="Pengaduan"
-        android:icon="@drawable/ic_pengaduan"/>
+        android:icon="@drawable/ic_pengaduan"
+        android:tint="@color/red" />
+
+    <item
+        android:id="@+id/notif"
+        android:title="Notifikasi"
+        android:icon="@drawable/ic_notif"
+        android:tint="@color/red" />
+
     <item
         android:id="@+id/profile"
         android:title="Profile"
-        android:icon="@drawable/ic_person"/>
+        android:icon="@drawable/ic_person"
+        android:tint="@color/red" />
+
 </menu>
