UPDATE: CreatePengaduan, allPengaduanFragment.java, dan edit pengaduan yang ada di dalam java maupun pada xml

--- a/app/src/main/res/drawable/container_edittext2.xml
+++ b/app/src/main/res/drawable/container_edittext2.xml
@@ -9,6 +9,6 @@ android:shape="rectangle">
         android:width="@dimen/_2sdp"
         android:color="@color/main"/>
     <solid
-        android:color="@color/gray"/>
+        android:color="@color/white"/>
 
 </shape>
