--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -1,12 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="24dp"
-    android:width="24dp"
-    android:viewportHeight="24"
-    android:viewportWidth="24"
-    android:tint="#FFFFFF">
-
-    <!-- Path for the plus sign without a circle -->
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M12,5v6H6v2h6v6h2v-6h6v-2h-6V5h-2z" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="27dp" android:tint="#FFFFFF" android:viewportHeight="24" android:viewportWidth="24" android:width="27dp">
+      
+    <path android:fillColor="@android:color/white" android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+    
 </vector>
