--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,10 +15,10 @@
         android:layout_marginTop="19.50dp"
         android:layout_marginEnd="19.50dp"
         android:layout_marginBottom="19.50dp"
-        android:fontFamily=""
-        android:text="Titik Suara"
+        android:fontFamily="@font/popmed"
         android:textColor="@color/black"
-        android:textSize="20dp"/>
+        android:textSize="@dimen/_13sdp"
+        android:text="Titik Suara"/>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -33,17 +33,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:layout_gravity="center"
-            android:fontFamily=""
+            android:fontFamily="@font/popsem"
             android:text="LOGIN"
             android:textColor="@color/black"
-            android:textSize="20.00sp"
+            android:textSize="@dimen/_15ssp"
             android:textStyle="bold" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Masukkan Username dan Password Anda"
             android:layout_gravity="center"
-            android:fontFamily=""
+            android:fontFamily="@font/popmed"
             android:textColor="@color/black"
             android:textSize="13.00sp"/>
 
@@ -73,7 +73,7 @@
                         android:paddingStart="48dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily=""
+                        android:fontFamily="@font/popmed"
                         android:hint="Username"
                         android:textColor="@color/black"
                         app:boxStrokeColor="@color/red"
@@ -100,7 +100,7 @@
                         android:paddingStart="48dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily=""
+                        android:fontFamily="@font/popmed"
                         android:hint="Password"
                         android:inputType="textPassword"
                         android:textColor="@color/black"
