--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main"
-    tools:context=".Util.DashboardActivity">
+    tools:context=".Fragment.DashboardFragment">
 
     <!-- Floating Action Button -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -26,43 +25,43 @@
         android:id="@+id/title1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:layout_marginEnd="@dimen/_15sdp"
-        android:layout_marginBottom="59dp"
-        android:text="Dashboard"
+        android:layout_marginStart="19.50dp"
+        android:layout_marginTop="19.50dp"
+        android:layout_marginEnd="19.50dp"
+        android:layout_marginBottom="19.50dp"
+        android:fontFamily="@font/popmed"
         android:textColor="@color/black"
-        android:textSize="20dp" />
+        android:textSize="@dimen/_13sdp"
+        android:text="Dashboard"/>
 
     <!-- Main Container for Cards -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="@drawable/container_login"
-        android:layout_below="@id/title1"
+        android:layout_marginTop="100.00dp"
         android:orientation="vertical"
+        android:background="@drawable/container_login"
+        android:padding="19.50dp"
         android:layout_height="match_parent">
 
         <!-- CardView for Pengaduan Diajukan -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvPengaduanDiajukan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/main"
                 android:orientation="horizontal"
                 android:padding="16dp">
-
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_diajukan" />
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -70,46 +69,44 @@
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:paddingStart="16dp">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Pengaduan Diajukan"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"
+                        android:textColor="@android:color/black"/>
                     <TextView
                         android:id="@+id/tv_pengaduan_diajukan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="14sp" />
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"/>
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <!-- CardView for Validasi OSIS -->
+        <!-- CardView for Pengaduan Validasi -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvValidasi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/main"
                 android:orientation="horizontal"
                 android:padding="16dp">
-
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_osis" />
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -117,46 +114,44 @@
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:paddingStart="16dp">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Validasi OSIS"
+                        android:text="Validasi"
                         android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"/>
                     <TextView
-                        android:id="@+id/tv_validasi_osis"
+                        android:id="@+id/tv_validasi"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="14sp" />
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"/>
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <!-- CardView for Pengaduan Diproses -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvDiproses"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/main"
                 android:orientation="horizontal"
                 android:padding="16dp">
-
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_proses" />
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -164,46 +159,44 @@
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:paddingStart="16dp">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Pengaduan Diproses"
+                        android:text="Diproses"
                         android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"/>
                     <TextView
-                        android:id="@+id/tv_pengaduan_diproses"
+                        android:id="@+id/tv_diproses"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="14sp" />
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"/>
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <!-- CardView for Pengaduan Ditolak -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvDitolak"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/main"
                 android:orientation="horizontal"
                 android:padding="16dp">
-
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_tolak" />
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -211,46 +204,44 @@
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:paddingStart="16dp">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Pengaduan Ditolak"
+                        android:text="Ditolak"
                         android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"/>
                     <TextView
-                        android:id="@+id/tv_pengaduan_ditolak"
+                        android:id="@+id/tv_ditolak"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="14sp" />
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"/>
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <!-- CardView for Pengaduan Selesai -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvSelesai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/main"
                 android:orientation="horizontal"
                 android:padding="16dp">
-
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_selesai" />
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -258,23 +249,25 @@
                     android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:paddingStart="16dp">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Pengaduan Selesai"
+                        android:text="Selesai"
                         android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"/>
                     <TextView
-                        android:id="@+id/tv_pengaduan_selesai"
+                        android:id="@+id/tv_selesai"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="14sp" />
+                        android:fontFamily="@font/popmed"
+                        android:textSize="@dimen/_11sdp"/>
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
     </LinearLayout>
+
 </RelativeLayout>
