--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -9,22 +9,23 @@
     tools:context=".Fragment.NotifFragment">
 
     <TextView
-        android:id="@+id/title1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_15sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:layout_marginEnd="@dimen/_15sdp"
-        android:layout_marginBottom="59dp"
-        android:text="Notifikasi"
+        android:layout_marginStart="19.50dp"
+        android:layout_marginTop="19.50dp"
+        android:layout_marginEnd="19.50dp"
+        android:layout_marginBottom="19.50dp"
+        android:fontFamily="@font/popmed"
         android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textSize="@dimen/_13sdp"
+        android:text="Notifikasi"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="@drawable/container_login"
-        android:layout_below="@id/title1"
+        android:layout_marginTop="100.00dp"
         android:orientation="vertical"
+        android:background="@drawable/container_login"
+        android:padding="19.50dp"
         android:layout_height="match_parent">
 
 
